test/captureIndexReplacement6_3.slq

def main(){
	x:=H(0:ğ”¹);
	a:=vector(3,x);
	f:=(){
		(a[1],a[2]):=(a[2],a[1]);
		return a;
	};
	b:=a; // error
	forget(f()=(x,x,x));
	assert(measure(H(x))=0);
}
